--- a/router/sleep/.redirect.html
+++ b/router/sleep/.redirect.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; URL=/router/index.html">
+	<meta http-equiv="refresh" content="0; URL=my.gtkportal.app/router/sleep">
 </head>
 <body>
 </body>
