--- a/router/index.html
+++ b/router/index.html
@@ -1,1 +1,8 @@
-HELO WORLD
+<html>
+<head>
+	<meta http-equiv="refresh" content="1; URL="my.gtkportal.app">
+</head>
+<body>
+<div><b>HELLO WORLD!</div>
+</body>
+</html>
