--- a/router/index.html
+++ b/router/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<meta http-equiv="refresh" content="1; URL="my.gtkportal.app">
+	<meta http-equiv="refresh" content="1; URL="digimy.speedtestcustom.com">
 </head>
 <body>
 <div><b>HELLO WORLD!</div>
