--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<iframe src="http://digimy.speedtestcustom.com/" =_blank></iframe>
+<meta http-equiv="refresh" content="0; URL=/sukabumi/index.html">
+<iframe src="https://digimy.speedtestcustom.com/" =_blank></iframe>
