--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; URL=/sukabumi/index.html">
+<meta http-equiv="refresh" content="0; URL="https://router.my.gtkportal.app/sukabumi/index.html">
 <iframe src="https://digimy.speedtestcustom.com/" =_blank></iframe>
