--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
+<html>
 <meta http-equiv="refresh" content="0; URL="https://router.my.gtkportal.app/sukabumi/index.html">
+<script>
+alert.("WORK")
+</script>
+</html>
